# rs-docker-containers2arrow-ipc

./: Cargo.toml  README.md  example.sh  rs-docker-containers2arrow-ipc
src/: lib.rs  main.rs
